log
Thu 25 Apr 2024 06:44:32 PM UTC: 
 tests:  0|6
total_score: 0/70
aa8d916
Thu 25 Apr 2024 06:47:43 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
77b98ea
Thu 25 Apr 2024 06:54:15 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:20: error: implicit declaration of function ‘resolverColision’ [-Werror=implicit-function-declaration]
   49 |     int nuevaPos = resolverColision(map, pos);
      |                    ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5da204b
Thu 25 Apr 2024 06:59:53 PM UTC: 
 hashmap.c | 30 ++++++++++++++++++------------
 1 file changed, 18 insertions(+), 12 deletions(-)
 tests:  0|0
38bac5c
